# django-crispy-crud

./: .gitignore  CHANGELOG.md  LICENSE  README.md  manage.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
src/crispy_crud/: apps.py  conf.py
src/crispy_crud/forms/: crispy.py
src/crispy_crud/management/commands/: crispy_crud_css.py
src/crispy_crud/models/: mixins.py
src/crispy_crud/static/crispy_crud/: crispy_crud.css
src/crispy_crud/static/crispy_crud/css/: components.css
src/crispy_crud/static/crispy_crud/js/: formState.js  pagination.js
src/crispy_crud/templates/crispy_crud/fragments/common/: error_alert.html  messages.html  page_heading.html
src/crispy_crud/templates/crispy_crud/fragments/details/: audit_table.html  delete_action.html
src/crispy_crud/templates/crispy_crud/fragments/forms/: hx_filter_form.html  read_only_form_field.html  submit_cancel.html
src/crispy_crud/templates/crispy_crud/fragments/table/: hx_pagination.html  table_cell.html
src/crispy_crud/templatetags/: crispy_crud_tags.py
src/crispy_crud/utils/: url_utils.py
src/crispy_crud/views/: __init__.py  mixins.py  utils.py
src/crudkit/: apps.py  conf.py
src/crudkit/forms/: __init__.py
src/crudkit/models/: __init__.py  mixins.py
src/crudkit/static/crudkit/css/: components.css
src/crudkit/templates/crudkit/fragments/common/: messages.html  success_alert.html
src/crudkit/templates/crudkit/fragments/details/: audit_table.html
src/crudkit/templates/crudkit/fragments/forms/: hx_filter_form.html  read_only_checkbox.html  read_only_field.html
src/crudkit/templates/crudkit/fragments/loaders/: busy_indicator.html  loading_spinner.html
src/crudkit/templates/crudkit/fragments/table/: hx_add_model_oob_link.html  hx_audit_pagination.html  table_heading.html
src/crudkit/views/: mixins.py  utils.py
tests/: conftest.py  settings.py  test_configuration.py  test_forms_crispy.py  test_integration.py  test_management_css.py  test_models_mixins.py  test_scaffolding.py  test_static_postprocessing.py  test_templates.py  test_url_utils.py  test_views_mixins.py  test_views_utils.py
tests/testapp/: filters.py  forms.py  models.py  urls.py  views.py
tests/testapp/migrations/: 0001_initial.py
tests/testapp/static_src/: styles.css
tests/testapp/templates/: base.html
tests/testapp/templates/testapp/: widget_confirm_delete.html  widget_detail.html  widget_list.html
tests/testapp/templates/testapp/fragments/: widget_table.html
