[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-crispy-crud"
dynamic = ["version"]
description = "Reusable Django CRUD views, forms, and template fragments with HTMX, Alpine.js, and Tailwind CSS"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Howie Weiner", email = "hello@builtbyhowie.co.uk" },
]
keywords = ["django", "crud", "htmx", "alpine", "tailwind", "forms"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "django>=5.0",
    "django-crispy-forms>=2.0",
    "crispy-tailwind>=1.0",
    "django-htmx>=1.17",
    "django-filter>=24.0",
]

[project.optional-dependencies]
audit = [
    "django-auditlog>=3.0",
]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "ruff>=0.4",
    "commitizen>=3.0",
]

[project.urls]
Homepage = "https://github.com/howieweiner/django-crispy-crud"
Repository = "https://github.com/howieweiner/django-crispy-crud.git"

[tool.hatch.version]
path = "src/crispy_crud/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
]

[tool.hatch.build.targets.wheel]
packages = ["src/crispy_crud"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.1.0"
tag_format = "v$version"
version_files = [
    "src/crispy_crud/__init__.py:__version__",
]
# cz generates CHANGELOG.md entries from conventional commits on bump; the
# Release workflow extracts the new version's section for the GitHub release.
update_changelog_on_bump = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = ["src", "."]

[tool.ruff]
target-version = "py310"
line-length = 120
